; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_posix_acl.c_posix_acl_fix_xattr_from_user.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_posix_acl.c_posix_acl_fix_xattr_from_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.user_namespace = type { i32 }

@init_user_ns = common dso_local global %struct.user_namespace zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @posix_acl_fix_xattr_from_user(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.user_namespace*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = call %struct.user_namespace* (...) @current_user_ns()
  store %struct.user_namespace* %6, %struct.user_namespace** %5, align 8
  %7 = load %struct.user_namespace*, %struct.user_namespace** %5, align 8
  %8 = icmp eq %struct.user_namespace* %7, @init_user_ns
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %15

10:                                               ; preds = %2
  %11 = load %struct.user_namespace*, %struct.user_namespace** %5, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @posix_acl_fix_xattr_userns(%struct.user_namespace* @init_user_ns, %struct.user_namespace* %11, i8* %12, i64 %13)
  br label %15

15:                                               ; preds = %10, %9
  ret void
}

declare dso_local %struct.user_namespace* @current_user_ns(...) #1

declare dso_local i32 @posix_acl_fix_xattr_userns(%struct.user_namespace*, %struct.user_namespace*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
